opa-policy-label-checker/templates/constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabelmatchnamespace
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabelMatchNamespace
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlabelmatchnamespace

        required_label := "someLabel"

        resource_labels := object.get(input.review.object.metadata, "labels", {})
        ns := input.review.object.metadata.namespace

        violation[{"msg": msg}] {
            # Retrieve namespace labels
            ns_object := data.inventory.cluster["v1"].Namespace[ns]
            ns_labels := object.get(ns_object.metadata, "labels", {})
            resource_labels[required_label] != ns_labels[required_label]
            msg := sprintf("Mismatch 'someLabel' label between resource and namespace, resource labels: %v, namespace labels: %v", [resource_labels, ns_labels])
        }
