opa-policy-label-checker/templates/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabelMatchNamespace
metadata:
  name: match-required-labels
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod", "Deployment", "ServiceAccount"]
